--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,7 @@ omit =
     invoicing_app/views.py
     invoicing_app/admin.py
     invoicing_app/models.py
+    invoicing_app/management/generate_tax_receipts_old.py
     invoicing/*
     manage.py
 
@@ -20,3 +21,4 @@ exclude_lines =
     print
     if __name__ == '__main__':
     def suite
+    if not self.dry_run:
