add more lines to exclude in coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -22,3 +22,8 @@ exclude_lines =
     if __name__ == '__main__':
     def suite
     if not self.dry_run:
+    def enable_logging(self):
+    def call_service(self, orders_kwargs):
+    def _log_exception(self, e, event_id=None, quiet=False):
+    if options['logging']:
+    today = dt.today()
