Adapting scripts to stage (#20)
* Fixing bugs for stage

* Adapting create_dummy_data script for a local enviroment

* Adapting old and new script for local and production enviroment

* Adding coverage

* Removing public id's

* Improving the coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -29,3 +29,5 @@ exclude_lines =
     if options['logging']:
     today = dt.today()
     def localize_date
+    except Exception
+    if not EB_TAX_INFO
