Script omitted in coverage because we dont have tests yet

--- a/.coveragerc
+++ b/.coveragerc
@@ -9,6 +9,7 @@ omit =
     invoicing_app/admin.py
     invoicing_app/models.py
     invoicing_app/management/commands/generate_tax_receipts_old.py
+    invoicing_app/management/commands/update_incomplete_tax_receipts.py
     invoicing_app/management/commands/create_dummy_data.py
     invoicing/*
     manage.py
