--- a/.coveragerc
+++ b/.coveragerc
@@ -11,6 +11,7 @@ omit =
     invoicing_app/management/commands/generate_tax_receipts_old.py
     invoicing_app/management/commands/update_incomplete_tax_receipts.py
     invoicing_app/management/commands/create_dummy_data.py
+    invoicing_app/tests/factories/tax_receipts.py
     invoicing/*
     manage.py
 
