--- a/.coveragerc
+++ b/.coveragerc
@@ -13,6 +13,7 @@ omit =
     invoicing_app/management/commands/create_dummy_data.py
     invoicing_app/management/commands/generate_tax_receipts.py
     invoicing_app/tests/factories/tax_receipts.py
+    invoicing_app/slack_module.py
     invoicing/*
     manage.py
 
@@ -34,3 +35,5 @@ exclude_lines =
     def localize_date
     except Exception
     if not EB_TAX_INFO
+    def _send_slack_notification_message
+    self._send_slack_notification_message
