Eda 1023 slack integration (#25)
* Adding a new file for  production

* Making a local integration with slack

* Fixing the slack message in case of error

* Deleting unnecessary comments

* Adding a comment in token

* Fixing slack_module bug

* Removing token

--- a/.coveragerc
+++ b/.coveragerc
@@ -11,7 +11,9 @@ omit =
     invoicing_app/management/commands/generate_tax_receipts_old.py
     invoicing_app/management/commands/update_incomplete_tax_receipts.py
     invoicing_app/management/commands/create_dummy_data.py
+    invoicing_app/management/commands/generate_tax_receipts.py
     invoicing_app/tests/factories/tax_receipts.py
+    invoicing_app/slack_module.py
     invoicing/*
     manage.py
 
@@ -33,3 +35,5 @@ exclude_lines =
     def localize_date
     except Exception
     if not EB_TAX_INFO
+    def _send_slack_notification_message
+    self._send_slack_notification_message
