Eda 1022 test update incomplete script (#28)
* add test to update_incomplete_tax_receipts script

* remove password from settings

* fix problems with migrations

* fix migrations 2

* remove Event and User Factory in TaxReceiptFactory and added to test

* remove from ignore script in coveragerc

* add test to handle and ignore logs methods

--- a/.coveragerc
+++ b/.coveragerc
@@ -9,7 +9,6 @@ omit =
     invoicing_app/admin.py
     invoicing_app/models.py
     invoicing_app/management/commands/generate_tax_receipts_old.py
-    invoicing_app/management/commands/update_incomplete_tax_receipts.py
     invoicing_app/management/commands/create_dummy_data.py
     invoicing_app/management/commands/generate_tax_receipts.py
     invoicing_app/tests/factories/tax_receipts.py
@@ -30,6 +29,8 @@ exclude_lines =
     def enable_logging
     def call_service
     def _log_exception
+    def _log_hosts_being_used
+    def _log_due_to_missing_to_info
     if options['logging']:
     today = dt.today()
     def localize_date
@@ -37,3 +38,5 @@ exclude_lines =
     if not EB_TAX_INFO
     def _send_slack_notification_message
     self._send_slack_notification_message
+    class TaxReceiptStatuses
+    if self.verbose
